# goit-PW-hw-07

dz_7/: Dockerfile  alembic.ini  create_db.py  dz_6.py  pyproject.toml  requirements.txt  salary.db  select_db.py
dz_7/dz_7/: models.py  my_select.py  mynotes.db  pyproject.toml  seeds.py
dz_7/dz_7/alembic/versions/: 4ce6cec091b7_init.py  a1e09783f503_init.py
